# KEngine

./: CMakeLists.txt  readme.md
.cache/clangd/index/: entity.cpp.92DD5C5C8D1010DD.idx  entity.h.D3B1951AAD7AA9A0.idx  main.cpp.71AAE2C4BE4E2BDE.idx
src/: main.cpp
src/core/entity/: entity.cpp  entity.h
src/utils/draw/: draw.cpp  draw.h
src/utils/render/: render.cpp  render.h
